@@ -1,1 +1,1 @@
-NPTL 0.38 by Ulrich Drepper
+NPTL 0.39 by Ulrich Drepper
