@@ -1,3 +1,7 @@
+2003-05-12  Thorsten Kukuk  <kukuk@suse.de>
+
+	* inet/netinet/igmp.h: Sync with Linux Kernel 2.5.69 and *BSD.
+
 2003-05-14  Andreas Schwab  <schwab@suse.de>
 
 	* sysdeps/unix/sysv/linux/ia64/umount.c: New file.
